# bot-builder-nlp

./: .env.example  pyproject.toml
bot_builder_nlp/: main.py  milvus.py
bot_builder_nlp/config/: settings.py
bot_builder_nlp/grpc_server/: module.py  service.py
bot_builder_nlp/proto/bot_builder_entity/: bot_builder_entity.proto  bot_builder_entity_pb2.py  bot_builder_entity_pb2.pyi  bot_builder_entity_pb2_grpc.py
bot_builder_nlp/proto/bot_builder_nlp/: bot_builder_nlp.proto  bot_builder_nlp_pb2.py  bot_builder_nlp_pb2.pyi  bot_builder_nlp_pb2_grpc.py
bot_builder_nlp/proto/bot_builder_story/: bot_builder_story.proto  bot_builder_story_pb2.py  bot_builder_story_pb2.pyi  bot_builder_story_pb2_grpc.py
bot_builder_nlp/proto/luna/: bentoml_service_pb2.py  bentoml_service_pb2.pyi  bentoml_service_pb2_grpc.py
bot_builder_nlp/utils/: evaluate_expression.py  find_block_by_id.py  get_json_list.py  get_slots.py  milvus.py  reshape_list.py
